# django-saml2-auth

./: .flake8  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.md  README.md  README.rst  RELEASE-LOG.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  requirements_test.txt  setup.py
.github/workflows/: deploy.yml  publish.yaml  shiftleft.yml  stale.yml  test.yml
django_saml2_auth/: __init__.py  errors.py  exceptions.py  saml.py  urls.py  user.py  utils.py  views.py
django_saml2_auth/tests/: __init__.py  dummy_cert.pem  dummy_key.pem  settings.py  test_saml.py  test_user.py  test_utils.py
