[project]
name = "grafana-django-saml2-auth"
dynamic = ["version"]
description = "Django SAML2 Authentication Made Easy."
authors = [{ name = "Mostafa Moradian", email = "mostafa@grafana.com" }]
requires-python = ">=3.10"
dependencies = [
    "dictor==0.1.12",
    "pyjwt==2.10.1",
    "pysaml2==7.5.2",
]

[dependency-groups]
dev = [
    "coverage==7.8.0",
    "cyclonedx-bom==5.3.0",
    "django-stubs==5.1.3",
    "mypy==1.15.0",
    "pytest==8.3.5",
    "pytest-django==4.11.0",
    "responses==0.25.7",
    "ruff>=0.11.2",
    "types-pysaml2==1.0.1",
    "types-setuptools==78.1.0.20250329",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["django_saml2_auth"]

[tool.ruff]
exclude = [
    "dist",
    "build",
    "env",
    "venv",
    ".env",
    ".venv",
    ".tox",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    "__pycache__",
    ".ruff",
]
line-length = 100

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_saml2_auth.tests.settings"
pythonpath = "."
filterwarnings = "ignore::DeprecationWarning"
addopts = ["--import-mode=importlib"]
testpaths = ["django_saml2_auth/tests"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "django_saml2_auth.tests.settings"
